RESOLVED FIXED52668
Removed RegisterFile::markGlobals because it was obtuse, and it unnecessarily relied on conservative marking.
https://bugs.webkit.org/show_bug.cgi?id=52668
Summary Removed RegisterFile::markGlobals because it was obtuse, and it unnecessarily...
Geoffrey Garen
Reported 2011-01-18 14:44:42 PST
Removed RegisterFile::markGlobals because it was obtuse, and it unnecessarily relied on conservative marking.
Attachments
Patch (3.48 KB, patch)
2011-01-18 14:45 PST, Geoffrey Garen
darin: review+
Geoffrey Garen
Comment 1 2011-01-18 14:45:44 PST
Darin Adler
Comment 2 2011-01-18 14:49:53 PST
Comment on attachment 79334 [details] Patch Wow, this really does seem much better.
Geoffrey Garen
Comment 3 2011-01-18 15:45:41 PST
Kenneth Russell
Comment 4 2011-01-18 20:33:32 PST
Reverted r76078 for reason: Caused WebGL and possibly other layout test crashes in Release mode Committed r76100: <http://trac.webkit.org/changeset/76100>
Kenneth Russell
Comment 5 2011-01-18 20:36:10 PST
I apologize, but I had to roll out this change. It was causing random layout test crashes. The WebGL tests fast/canvas/webgl/constants.html and fast/canvas/webgl/gl-enum-tests.html seemed to be the most affected and crashed 100% of the time on my Snow Leopard machine in Release mode with "run-webkit-tests fast/canvas/webgl". I barely caught this before the revision scrolled off the bottom of the build.webkit.org console. Here are the top few frames from DumpRenderTree in gdb when the crash occurred. Program received signal EXC_BAD_ACCESS, Could not access memory. Reason: KERN_PROTECTION_FAILURE at address: 0x00000001006ffdc0 0x0000000100226aad in JSC::CollectorBitmap::getset () at /Users/kbr/src/chrome2/src/third_party/WebKit/Source/JavaScriptCore/runtime/MarkedSpace.h:148 #1 0x0000000100226aad in JSC::CollectorBitmap::getset () at /Users/kbr/src/chrome2/src/third_party/WebKit/Source/JavaScriptCore/runtime/MarkedSpace.h:148 #2 0x0000000100226aad in JSC::CollectorBitmap::getset () at /Users/kbr/src/chrome2/src/third_party/WebKit/Source/JavaScriptCore/runtime/MarkedSpace.h:148 #3 0x0000000100226aad in JSC::MachineStackMarker::markCurrentThreadConservativelyInternal (this=<value temporarily unavailable, due to optimizations>, markStack=@0x10dfaca80) at /Users/kbr/src/chrome2/src/third_party/WebKit/Source/JavaScriptCore/runtime/MachineStackMarker.cpp:200
Geoffrey Garen
Comment 6 2011-01-19 10:13:07 PST
Strange -- the EWS bots seemed OK with the patch. Anyway, thanks for rolling this out, Kenneth. I'll take another look.
Geoffrey Garen
Comment 7 2011-01-19 18:56:55 PST
Committed revision 76193: <http://trac.webkit.org/changeset/76193>
Note You need to log in before you can comment on or make changes to this bug.